<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.bt2.feature.newPassword.NewPasswordViewModel" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginHorizontal="20sp"
        android:orientation="vertical"
        android:gravity="top">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/btnScreenNewPW"
            android:onClick="@{() -> viewModel.onClickBack()}"
            android:layout_gravity="start"
            android:background="@drawable/round_background"
            android:src="@drawable/baseline_arrow_back_24"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="New Password"
            android:fontFamily="sans-serif"
            android:textFontWeight="700"
            android:textSize="25sp"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/gray"
            android:text="Your new password must be different \n from previously used passwords." />
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:helperTextTextColor="@color/red"
            app:helperText="@{viewModel.formData.passwordError}"
            app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:text="@{viewModel.formData.password}"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onPasswordChanged(text.toString())}"
                android:importantForAccessibility="yes"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:helperTextTextColor="@color/red"
            app:helperText="@{viewModel.formData.confirmPasswordError}"
            app:boxBackgroundMode="outline">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pw"
                android:text="@{viewModel.formData.confirmPassword}"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onConfirmPasswordChanged(text.toString())}"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="5dp"
            android:text="@string/forgot_password" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> viewModel.onClickNewPassWord()}"
            android:text="Create New Password"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            android:backgroundTint="@color/brown"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>